# Magents

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
examples/: run_multi_strategy_backtest.py
src/: __init__.py  main.py
src/core/: engine.py  event.py  order.py  portfolio.py
src/data/: management.py
src/data/feeds/: base.py
src/risk/: limits.py  manager.py
src/utils/: config.py  visualization.py
tests/: test_config.py  test_event.py  test_order.py  test_portfolio.py  test_risk.py
