[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "magents"
version = "0.1.0"
description = "Multi-Agent Generative Trading System"
authors = ["LLMQuant <info@llmquant.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
magents = "src.main:main"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py38"]